--- a/decoweb.css
+++ b/decoweb.css
@@ -221,3 +221,17 @@ address{
 	background-size: cover;
     height:200px;
 }
+
+@media screen and (max-width: 480px){
+	header{
+border-bottom: 1px solid #466995;
+background-color: rgb(10,10,10);
+ box-sizing: border-box;
+ position: static;
+ position: relative;
+ left: 0;
+ top: 0px;
+ text-align: center;
+ width: 100%;
+}
+}
