--- a/decoweb.css
+++ b/decoweb.css
@@ -95,7 +95,7 @@ header{
 border-bottom: 1px solid #466995;
 background-color: rgb(10,10,10);
  box-sizing: border-box;
- position: fixed;
+ position: relative;
  left: 0;
  top: 0px;
  text-align: center;
@@ -222,13 +222,13 @@ address{
     height:200px;
 }
 
-@media screen and (max-width:1024px){
-	header{
+@media screen and (min-width:320px) and (max-width:1024px){
+header{
 border-bottom: 1px solid #466995;
 background-color: rgb(10,10,10);
  box-sizing: border-box;
- position: static;
- position: relative;
+ position: fixed;
+ z-index: 999;
  left: 0;
  top: 0px;
  text-align: center;
