--- a/decoweb.css
+++ b/decoweb.css
@@ -15,14 +15,8 @@ font-family:serif;
 }
 div{width: 100%
 }
-
-.hee{
-position: static;
-top:0px;
-left:0px;
-right:0px;
-width:100%;
-z-index:10000;
+li{
+	list-style-type:none;
 }
 header p{
 	width: 100%;
@@ -31,30 +25,31 @@ header p{
 h3,h4{
 	text-align: center;	
 }
-li{
-	width:100%;
-	left:0px;
-	list-style-type:none;
-	text-align:center;
-	margin:0;
-}
 .home p{
-font-size:90px;
+font-size:70px;
+}
+
+.home strong{
+filter: blur(1px);
+background-color:rgb(10,10,10);
+
 }
 section{
 width: 100%;
-height:auto;
+height:750px;
 left:0px;
 right:0px;
 }
-ul{
+header ul{
 	width:100%;
+	list-style-type:none;
+	text-align:center;
 }
 a:hover{
 	color:green !important;
 }
 
-li.hea{
+header li{
 display: inline-block;
 width: 13%;
 text-align: center;
@@ -113,6 +108,7 @@ background-color: rgb(10,10,10);
 }
 
 .home{
+	
 background: url("cl.jpg");
 width: 100%;
 top:0px;
@@ -139,7 +135,7 @@ img{
 background-size: cover;
 }
 .serviceli{
-list-style-type: none:
+list-style-type: none;
 width: 100%;
 color: white;
 display: block;
@@ -153,7 +149,6 @@ address{
   width: 100%;
   margin: 0px;
   text-align: center;
-  position: static;
   position: relative;
   top: 0px;
   padding-top: 60px;
@@ -233,20 +228,108 @@ address{
     height:200px;
 }
 
-@media screen and (max-width:1024px){
+@media screen and (max-width:768px){
 header{
 border-bottom: 1px solid #466995;
 background-color: rgb(10,10,10);
  box-sizing: border-box;
- position: static;
-  position: relative;
+ position: fixed;
  z-index: 999;
  left: 0;
  top: 0px;
  text-align: center;
  width: 100%;
 }
-li{
-	font-size:10px;
+header ul{
+	padding:0px;
+	width:100%;	
+	list-style-type:none;	
+}
+header li{
+	display:block;
+	text-align:center;
+	font-size:12px;
+	padding:0px;
+	width:100%;
+}
+section{
+width: 100%;
+height:auto;
+left:0px;
+right:0px;
+position: static;
+position: relative;
+top:0px;
+padding-top:150px;
+}
+footer{
+text-align: center;
+position: static;
+position: relative;
+top:0px;
+height:auto;
+padding-top: 150px;
+}
+
+.home{
+height:800px;
+background: url("cl.jpg");
+width: 100%;
+top:0px;
+left:0px;
+background-size:cover !important;
+font-size: 100px;
+text-align:center !important;
+color:white;
+
+position: static;
+padding-top: 150px;
+}
+
+.service{
+  width: 100%;
+  margin: 0px;
+  text-align: center;
+  position: relative;
+  top: 0px;
+  padding-top: 150px;
+}
+.aboutus{
+	padding-top: 150px;
+	 width: 100%;
+  margin: 0;
+  text-align: center;
+  position: static;
+  position: relative;
+  top: 0px;
+}
+.gallary{
+ padding-top: 150px;
+  width: 100%;
+  margin: 0;
+  text-align: center;
+  position: static;
+  position: relative;
+  top: 0px;
+  left:0px;
+  right:0px;
+}
+.contactus{
+	padding-top: 150px;
+	 width: 100%;
+  margin: 0;
+  text-align: center;
+  position: relative;
+  top: 0px;
+}
+.followus{
+  padding-top: 150px;
+  width: 100%;
+  margin: 0;
+  text-align: center;
+  position: static;
+  position: relative;
+  top: 0px;
+  height:auto;
 }
 }
