--- a/decoweb.css
+++ b/decoweb.css
@@ -11,6 +11,7 @@ background-color: rgb(10,10,10) !important;
 color:white !important;
 text-align:center;	
 font-family:serif;
+
 }
 }
 div{width: 100%
@@ -265,11 +266,15 @@ header li{
 	height:50px;
 	list-style-type:none;	
 	text-decoration:none;
+	font-size:25px; !important
+}
+header li a:hover{
+	text-decoration:none;
 }
 .but{
 	display:inline-block;
 	float:right;
-	width:20%;
+	width:30%;
 	right:0;
 	top:0;
 	background-color: rgb(10,10,10);
@@ -277,7 +282,8 @@ header li{
 	border:rgb(10,10,10);
 	height:50px;
 	position:static;
-	top:0;
+	font-size:30px !important;
+	text-align:right;
 }
 .my{
 	width:100%;
@@ -289,9 +295,11 @@ header li{
 	float:left;
 	width:30%;
 	left:0;
-	text-align:center;
+	text-align:left;
 	position:static;
 	height:50px;
+	margin-top:0px;
+	font-size:30px !important;
 }
 .show{
 	display:block;
